# C

./: .gitignore
Fdf/: ._sprite  ._test_maps  ._xpm  CMakeLists.txt  FdF.h  Makefile  all_calc.c  all_color.c  all_free.c  axis_rotation.c  bonus_ft.c  draw_map.c  drow_map.c  fdf  fdf.h  ft_draw_line.c  ft_error.c  ft_hook.c  ft_mouse_hook.c  ft_parser.c  main.c  mulst_scale_shift.c
Fdf/libft/: #ft_strsplit.c  ._ft_strjoin.c  ._ft_strlen.c  ._ft_strsplit.c  ._get_next_line.h  Makefile  ft_strsplit.c  get_next_line.c  get_next_line.h  libft.h
Fdf/sprite/: ._down.xpm  ._left.xpm  ._left_down.xpm  ._left_up.xpm  ._right.xpm  ._right_down.xpm  ._right_up.xpm  ._up.xpm  down.xpm  left.xpm
Fdf/test_maps/: ._10-2.fdf  ._10-70.fdf  ._100-6.fdf  ._20-60.fdf  ._42.fdf  ._50-4.fdf  ._basictest.fdf  ._elem.fdf  ._maps  ._mars.fdf  ._pentenegpos.fdf  ._plat.fdf  ._pnp_flat.fdf  ._pylone.fdf  ._pyra.fdf  ._pyramide.fdf  ._pyramide_def.fdf  ._test_chaos.fdf  ._test_empty.fdf  ._test_n.fdf  dote.fdf  my_test1.fdf  test_chaos.fdf
Fdf/test_maps/maps/: ._42.fdf  ._MGDS_AMAZONIA_OCEAN1_XXL.fdf  ._elem-col.fdf  ._elem-fract.fdf  ._elem.fdf  ._elem2.fdf  ._julia.fdf  ._mars.fdf  ._marsX.fdf  ._t1.fdf  ._t2.fdf  marsX.fdf
Fdf/xpm/: ._d.xpm  ._l.xpm  ._l_d.xpm  ._l_u.xpm  ._r.xpm  ._r_d.xpm  ._r_u.xpm  ._u.xpm  ._up.xpm  l_d.xpm  l_u.xpm  r.xpm  r_d.xpm  r_u.xpm  up.xpm
RTv1/: CMakeLists.txt  Makefile
RTv1/SRC/: ft_Init_scene_part1.c  ft_add_light_spot.c  ft_antialiasing.c  ft_cone.c  ft_create_scene_map.c  ft_cylinder.c  ft_error.c  ft_exit.c  ft_init_all.c  ft_init_scene_part2.c  ft_key_hook.c  ft_light.c  ft_math.c  ft_math.c.c  ft_mous_hook.c  ft_phong.c  ft_plane.c  ft_random.c  ft_render.c  ft_rotate_axis.c  ft_sphere.c  ft_vector_math.c  main.c
RTv1/includes/: rtv1.h
RTv1/minilibx/test/: mlx-test
fractal/: CMakeLists.txt  Makefile
fractal/IMG/: ._help.xpm  cab.xpm  cab1.xpm  cab2.xpm  cab3.xpm  ej.xpm  ej_b.xpm  expos.xpm  help.xpm  shot.xpm
fractal/Kernel/: burn_ship.cl  fish.cl  julia.cl  mandelbrot.cl  mask.cl  newton.cl
fractal/SRC/: cl.c  cl_check_succes.c  fern.c  ft_create_img.c  ft_error.c  ft_init.c  ftcl_create_kernel.c  ftcl_get_device.c  ftcl_load_program.c  ftcl_release.c  ftcl_thread.c  init_bonus.c  init_game.c  init_mandatory.c  julia_new.c  key_hook.c  key_swap.c  main.c  mouse_hook.c  sierpinski.c  space.c  the_game.c
fractal/includes/: fractal.h
